<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/gree_neo_card_bg"
    android:orientation="horizontal"
    android:paddingStart="16dp"
    android:paddingTop="14dp"
    android:paddingEnd="16dp"
    android:paddingBottom="14dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gree_env_temp_label"
            android:textColor="@color/gree_neo_ink3"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/gree_env_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/gree_neo_ink"
            android:textSize="19sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gree_env_humid_label"
            android:textColor="@color/gree_neo_ink3"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/gree_env_humid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/gree_neo_ink"
            android:textSize="19sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gree_env_aqi_label"
            android:textColor="@color/gree_neo_ink3"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/gree_env_aqi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="19sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>
